--- a/about.html
+++ b/about.html
@@ -28,39 +28,59 @@
 
         #particle-canvas { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; pointer-events: none; }
 
-        /* NAV & DOCK */
+        /* NAVIGATION - MATCHES HOME PAGE LOGIC */
         .luxury-nav { background: rgba(0,0,0,0.95); border-bottom: 2px solid var(--gold); padding: 1rem 2rem; position: sticky; top: 0; z-index: 1000; }
         .nav-container { max-width: 1400px; margin: 0 auto; display: flex; justify-content: space-between; align-items: center; }
+        .nav-brand { display: flex; align-items: center; gap: 12px; }
+        .nav-logo-small { height: 40px; width: auto; }
         .nav-title { font-family: 'Orbitron'; font-weight: 900; font-size: 1.1rem; letter-spacing: 1px; }
-        .mobile-dock { display: none; position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%); width: 90%; max-width: 400px; background: rgba(10, 10, 10, 0.85); backdrop-filter: blur(15px); border: 1px solid var(--gold); border-radius: 50px; padding: 12px 25px; z-index: 2000; justify-content: space-around; align-items: center; box-shadow: 0 10px 30px rgba(0,0,0,0.5), var(--neon-glow); }
-        .dock-item { color: white; text-decoration: none; text-align: center; font-family: 'Orbitron'; font-size: 0.65rem; font-weight: 700; }
+
+        .desktop-links { display: flex; gap: 20px; }
+        .desktop-links a { color: white; text-decoration: none; font-weight: 700; font-family: 'Orbitron'; font-size: 0.8rem; transition: 0.3s; }
+        .desktop-links a:hover { color: var(--gold); text-shadow: var(--neon-glow); }
+
+        /* FLOATING GLASS DOCK (MOBILE) */
+        .mobile-dock {
+            display: none;
+            position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%);
+            width: 90%; max-width: 400px;
+            background: rgba(10, 10, 10, 0.85);
+            backdrop-filter: blur(15px);
+            border: 1px solid var(--gold);
+            border-radius: 50px;
+            padding: 12px 25px;
+            z-index: 2000;
+            justify-content: space-around;
+            align-items: center;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.5), var(--neon-glow);
+        }
+        .dock-item { color: white; text-decoration: none; text-align: center; font-family: 'Orbitron'; font-size: 0.65rem; font-weight: 700; transition: 0.3s; }
         .dock-item i { display: block; font-size: 1.2rem; color: var(--gold); margin-bottom: 4px; }
 
-        /* ABOUT HERO */
+        /* CONTENT SECTIONS */
         .about-hero { padding: 6rem 1.5rem; text-align: center; }
         .about-title { font-family: 'Orbitron'; font-size: clamp(2.5rem, 8vw, 5rem); font-weight: 900; color: var(--gold); text-shadow: var(--neon-glow); margin-bottom: 20px; }
         .about-subtitle { font-family: 'Orbitron'; color: #888; letter-spacing: 3px; max-width: 800px; margin: 0 auto; line-height: 1.6; }
 
-        /* PILLARS GRID */
         .pillar-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; max-width: 1200px; margin: 4rem auto; padding: 0 1.5rem; }
         .pillar-card { background: var(--glass); border: 1px solid #333; padding: 3rem 2rem; border-radius: 20px; text-align: center; transition: 0.4s; backdrop-filter: blur(10px); }
         .pillar-card:hover { border-color: var(--red); transform: translateY(-10px); box-shadow: 0 0 25px rgba(255, 0, 0, 0.2); }
         .pillar-icon { font-size: 3rem; color: var(--red); margin-bottom: 20px; filter: drop-shadow(0 0 10px var(--red)); }
         .pillar-card h3 { font-family: 'Orbitron'; color: var(--gold); margin-bottom: 15px; letter-spacing: 2px; }
 
-        /* LEADERSHIP COMMAND CENTER */
+        /* LEADERSHIP */
         .leadership-sec { padding: 4rem 1.5rem; text-align: center; }
         .leader-flex { display: flex; justify-content: center; gap: 40px; flex-wrap: wrap; margin-top: 3rem; }
         .leader-card { width: 350px; background: rgba(15,15,15,0.9); border-left: 4px solid var(--gold); padding: 2.5rem; border-radius: 0 15px 15px 0; text-align: left; transition: 0.3s; }
         .leader-card:hover { background: rgba(255,215,0,0.05); }
         .leader-role { font-family: 'Orbitron'; color: var(--gold); font-size: 0.7rem; letter-spacing: 2px; font-weight: 900; }
         .leader-name { font-family: 'Orbitron'; font-size: 2rem; margin: 10px 0; letter-spacing: 1px; }
-        .leader-bio { color: #888; font-size: 0.9rem; line-height: 1.5; }
 
         /* FOOTER */
         .footer { text-align: center; padding: 4rem 1.5rem; border-top: 1px solid #222; background: #000000; }
         .footer-text { font-family: 'Orbitron'; font-size: 0.75rem; color: #555; letter-spacing: 3px; text-transform: uppercase; margin-bottom: 15px; }
-        .legal-links a { color: #888; text-decoration: none; font-size: 0.7rem; font-family: 'Orbitron'; margin: 0 10px; }
+        .legal-links a { color: #888; text-decoration: none; font-size: 0.7rem; font-family: 'Orbitron'; margin: 0 10px; transition: 0.3s; }
+        .legal-links a:hover { color: var(--gold); }
 
         @media (max-width: 850px) { .mobile-dock { display: flex; } .desktop-links { display: none; } }
     </style>
@@ -72,10 +92,11 @@
     <nav class="luxury-nav">
         <div class="nav-container">
             <div class="nav-brand">
+                <img src="logo.png" alt="Logo" class="nav-logo-small">
                 <div class="nav-title"><span style="color:var(--gold)">BLOOD</span> <span style="color:var(--red)">ESPORTS</span></div>
             </div>
             <div class="desktop-links">
-                <a href="index.html">HOME</a>
+                <a href="about.html">ABOUT</a>
                 <a href="clans/4kt.html">4KT</a>
                 <a href="clans/otf.html">OTF</a>
                 <a href="events.html">EVENTS</a>
@@ -84,7 +105,7 @@
     </nav>
 
     <div class="mobile-dock">
-        <a href="index.html" class="dock-item"><i class="fas fa-home"></i>HOME</a>
+        <a href="about.html" class="dock-item"><i class="fas fa-info-circle"></i>ABOUT</a>
         <a href="clans/4kt.html" class="dock-item"><i class="fas fa-crown"></i>4KT</a>
         <a href="clans/otf.html" class="dock-item"><i class="fas fa-users"></i>OTF</a>
         <a href="events.html" class="dock-item"><i class="fas fa-calendar-alt"></i>EVENTS</a>
@@ -92,24 +113,19 @@
 
     <section class="about-hero">
         <h1 class="about-title">THE KINGDOM</h1>
-        <p class="about-subtitle">ESTABLISHED 2022. REDEFINING COMPETITIVE DOMINANCE. WE ARE BLOOD ESPORTS.</p>
+        <p class="about-subtitle">ESTABLISHED 2022. 100+ MEMBERS STRONG. WE ARE THE ELITE OF CODM.</p>
     </section>
 
     <div class="pillar-grid">
         <div class="pillar-card">
             <i class="fas fa-shield-alt pillar-icon"></i>
             <h3>UNMATCHED SKILL</h3>
-            <p>We don't just compete; we dominate. Our Tier 1 division is a fortress of strategic brilliance and mechanical precision.</p>
+            <p>Our Tier 1 division is a fortress of strategic brilliance and mechanical precision.</p>
         </div>
         <div class="pillar-card">
             <i class="fas fa-fist-raised pillar-icon"></i>
             <h3>FAMILY LEGACY</h3>
-            <p>Blood is thicker than water. Our OTF division nurtures the future, turning grinders into legends.</p>
-        </div>
-        <div class="pillar-card">
-            <i class="fas fa-globe pillar-icon"></i>
-            <h3>GLOBAL IMPACT</h3>
-            <p>From local scrims to international tournaments, the world knows the name Blood Esports.</p>
+            <p>Through our OTF division, we turn dedicated grinders into competitive legends.</p>
         </div>
     </div>
 
@@ -121,12 +137,12 @@
             <div class="leader-card">
                 <div class="leader-role">FOUNDER & MASTERMIND</div>
                 <div class="leader-name">CHOCO</div>
-                <p class="leader-bio">The visionary. Choco architected the Kingdom's foundation, ensuring Blood Esports remains the apex predator of CODM.</p>
+                <p>Leading Blood Esports with strategic vision since day one.</p>
             </div>
             <div class="leader-card">
                 <div class="leader-role">OPERATIONS DIRECTOR</div>
                 <div class="leader-name">DANNY</div>
-                <p class="leader-bio">The tactician. Danny coordinates the logistics of our massive roster, maintaining peak performance across all divisions.</p>
+                <p>Coordinating logs and team performance across all elite divisions.</p>
             </div>
         </div>
     </section>
@@ -134,8 +150,8 @@
     <footer class="footer">
         <p class="footer-text">ALL RIGHTS RESERVED BLOOD ESPORTS 2026</p>
         <div class="legal-links">
-            <a href="terms.html">Terms</a>
-            <a href="privacy.html">Privacy</a>
+            <a href="terms.html">Terms of Service</a>
+            <a href="privacy.html">Privacy Policy</a>
         </div>
     </footer>
 
