--- a/teams/4kt-shadow-hunters.html
+++ b/teams/4kt-shadow-hunters.html
@@ -158,7 +158,7 @@
 
     <footer class="footer">
         <p class="footer-text">© 2026 BLOOD ESPORTS | 4KT SHADOW HUNTERS - TIER 1 CHAMPIONS</p>
-    </footer
+    </footer>
 
     <script>
         const canvas = document.getElementById('particle-canvas');
