--- a/teams/4kt-shadow-hunters.html
+++ b/teams/4kt-shadow-hunters.html
@@ -10,9 +10,9 @@
         :root { --gold: #FFD700; --red: #FF0000; --black: #000000; --glass: rgba(255, 255, 255, 0.05); }
         body { background-color: var(--black); color: white; font-family: 'Montserrat', sans-serif; overflow-x: hidden; }
         #particle-canvas { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; }
-        .luxury-nav { background: rgba(0,0,0,0.95); border-bottom: 2px solid var(--gold); padding: 1rem 2rem; position: sticky; top: 0; z-index: 1000; }
-        .hero { text-align: center; padding: 6rem 1.5rem; }
-        .hero h1 { font-family: 'Orbitron'; font-size: 3.5rem; color: var(--gold); text-shadow: 0 0 20px rgba(255, 215, 0, 0.3); }
+        .luxury-nav { background: rgba(0,0,0,0.95); border-bottom: 2px solid var(--gold); padding: 1rem 2rem; }
+        .hero { text-align: center; padding: 5rem 1.5rem; }
+        .hero h1 { font-family: 'Orbitron'; font-size: clamp(2rem, 8vw, 3.5rem); color: var(--gold); }
         .player-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; max-width: 1250px; margin: 0 auto; padding: 2rem; }
         .player-card { background: var(--glass); border: 1px solid #333; padding: 2.5rem 1.5rem; border-radius: 20px; text-align: center; backdrop-filter: blur(15px); }
         .player-role { color: var(--red); font-family: 'Orbitron'; font-size: 0.7rem; font-weight: 900; letter-spacing: 2px; margin-bottom: 10px; display: block; }
@@ -31,7 +31,8 @@
         </div>
     </nav>
     <div class="hero">
-        <h1 style="font-family:'Orbitron';">4零丨 SHADOW HUNTERS</h1>
+        <p style="font-family:'Orbitron'; color:var(--red); letter-spacing:5px;">4零丨 DIVISION</p>
+        <h1>SHADOW HUNTERS</h1>
     </div>
     <div class="player-grid">
         <div class="player-card"><span class="player-role">WILDCARD</span><div class="player-name">4零丨Mazi</div><div class="stat-bar"><div class="stat-item"><span class="stat-val">4.8</span><span class="stat-lab">KD</span></div><div class="stat-item"><span class="stat-val">85%</span><span class="stat-lab">WR</span></div></div></div>
@@ -39,7 +40,7 @@
         <div class="player-card"><span class="player-role">SNIPER</span><div class="player-name">4零丨Virus</div><div class="stat-bar"><div class="stat-item"><span class="stat-val">4.5</span><span class="stat-lab">KD</span></div><div class="stat-item"><span class="stat-val">82%</span><span class="stat-lab">WR</span></div></div></div>
         <div class="player-card"><span class="player-role">ENTRY FRAGGER</span><div class="player-name">4零丨Melly</div><div class="stat-bar"><div class="stat-item"><span class="stat-val">4.9</span><span class="stat-lab">KD</span></div><div class="stat-item"><span class="stat-val">87%</span><span class="stat-lab">WR</span></div></div></div>
     </div>
-    <footer class="footer">© 2026 BLOOD ESPORTS | 100+ MEMBERS STRONG</footer>
+    <footer class="footer">ALL RIGHTS RESERVED BLOOD ESPORTS 2026</footer>
     <script>
         const canvas = document.getElementById('particle-canvas'); const ctx = canvas.getContext('2d'); let particles = [];
         function init() { canvas.width = window.innerWidth; canvas.height = window.innerHeight; for (let i = 0; i < 150; i++) particles.push({ x: Math.random() * canvas.width, y: Math.random() * canvas.height, size: Math.random() * 2.5, speed: Math.random() * 0.4 + 0.1 }); }
