--- a/teams/4kt-shadow-hunters.html
+++ b/teams/4kt-shadow-hunters.html
@@ -3,178 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SHADOW HUNTERS | BLOOD ESPORTS</title>
+    <title>4KT Shadow Hunters | Blood Esports</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    
     <style>
-        :root {
-            --gold: #FFD700;
-            --red: #FF0000;
-            --black: #000000;
-            --glass: rgba(255, 255, 255, 0.05);
-            --neon-glow: 0 0 25px rgba(255, 215, 0, 0.4);
-        }
-
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-
-        body {
-            background-color: var(--black);
-            color: white;
-            font-family: 'Montserrat', sans-serif;
-            overflow-x: hidden;
-            padding-bottom: 120px;
-        }
-
-        #particle-canvas { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; pointer-events: none; }
-
-        /* NAVIGATION */
-        .luxury-nav { background: rgba(0,0,0,0.95); border-bottom: 2px solid var(--gold); padding: 1rem 2rem; position: sticky; top: 0; z-index: 1000; }
-        .nav-container { max-width: 1400px; margin: 0 auto; display: flex; justify-content: space-between; align-items: center; }
-        .nav-brand { display: flex; align-items: center; gap: 12px; text-decoration: none; }
-        .nav-title { font-family: 'Orbitron'; font-weight: 900; font-size: 1.1rem; letter-spacing: 1px; }
-
-        /* HERO HEADER */
-        .roster-hero { padding: 6rem 1.5rem; text-align: center; }
-        .team-badge-large { font-size: 4rem; color: var(--gold); margin-bottom: 1rem; filter: drop-shadow(0 0 15px var(--gold)); }
-        .team-title { font-family: 'Orbitron'; font-size: clamp(2rem, 8vw, 4rem); font-weight: 900; text-shadow: var(--neon-glow); }
-        .team-tagline { font-family: 'Orbitron'; color: var(--gold); letter-spacing: 5px; margin: 15px 0; font-size: 1.2rem; }
-
-        /* PLAYER GRID */
-        .player-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 25px; max-width: 1300px; margin: 4rem auto; padding: 0 1.5rem; }
-        .player-card { background: var(--glass); border: 1px solid #333; padding: 2.5rem 1.5rem; border-radius: 20px; text-align: center; transition: 0.4s; backdrop-filter: blur(15px); position: relative; }
-        .player-card:hover { border-color: var(--gold); transform: translateY(-10px); box-shadow: 0 0 30px rgba(255, 215, 0, 0.15); }
-        .player-flag { position: absolute; top: 15px; right: 20px; font-size: 1.5rem; }
-        .player-role { color: var(--red); font-family: 'Orbitron'; font-size: 0.7rem; font-weight: 900; letter-spacing: 2px; margin-bottom: 10px; display: block; }
-        .player-name { font-family: 'Orbitron'; font-size: 1.6rem; color: white; margin-bottom: 20px; }
-        
-        .stat-bar { display: flex; justify-content: center; gap: 25px; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 15px; }
-        .stat-item { text-align: center; }
-        .stat-val { display: block; font-family: 'Orbitron'; color: var(--gold); font-size: 1.2rem; }
-        .stat-lab { font-size: 0.6rem; color: #666; text-transform: uppercase; letter-spacing: 1px; }
-
-        /* FOOTER */
-        .footer { text-align: center; padding: 4rem 1.5rem; border-top: 1px solid #222; }
+        :root { --gold: #FFD700; --black: #080808; --gray: #222; }
+        body { background: var(--black); color: white; font-family: 'Montserrat', sans-serif; margin: 0; overflow-x: hidden; }
+        .nav { background: rgba(0,0,0,0.9); padding: 1.2rem; border-bottom: 2px solid var(--gold); display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; }
+        .nav-logo { font-family: 'Orbitron'; color: var(--gold); text-decoration: none; font-weight: 900; letter-spacing: 2px; }
+        .hero { text-align: center; padding: 6rem 1rem; background: radial-gradient(circle at center, #1a1a00 0%, #080808 100%); }
+        .hero h1 { font-family: 'Orbitron'; color: var(--gold); font-size: clamp(2.5rem, 8vw, 4rem); text-shadow: 0 0 20px rgba(255, 215, 0, 0.3); }
+        .container { max-width: 1000px; margin: 0 auto; padding: 2rem; }
+        .glass-panel { background: rgba(255,255,255,0.03); border: 1px solid rgba(255, 215, 0, 0.2); border-radius: 20px; padding: 2.5rem; margin-bottom: 2rem; backdrop-filter: blur(10px); }
+        .roster-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-top: 1.5rem; }
+        .player-card { background: rgba(0,0,0,0.5); padding: 1.5rem; border-radius: 15px; text-align: center; border: 1px solid transparent; transition: 0.3s; }
+        .player-card:hover { border-color: var(--gold); transform: translateY(-5px); }
+        .btn { display: inline-block; background: var(--gold); color: black; padding: 1rem 2rem; border-radius: 50px; text-decoration: none; font-family: 'Orbitron'; font-weight: 900; transition: 0.3s; }
+        .btn:hover { box-shadow: 0 0 20px rgba(255, 215, 0, 0.5); transform: scale(1.05); }
     </style>
 </head>
 <body>
-
-    <canvas id="particle-canvas"></canvas>
-
-    <nav class="luxury-nav">
-        <div class="nav-container">
-            <a href="index.html" class="nav-brand">
-                <div class="nav-title"><span style="color:var(--gold)">BLOOD</span> <span style="color:var(--red)">ESPORTS</span></div>
-            </a>
-            <div style="display:flex; gap:20px;">
-                <a href="4kt.html" style="color:white; text-decoration:none; font-family:'Orbitron'; font-size:0.8rem;"><i class="fas fa-arrow-left"></i> BACK TO 4KT</a>
-            </div>
-        </div>
+    <nav class="nav">
+        <a href="../index.html" class="nav-logo">SHADOW HUNTERS</a>
+        <div style="font-family:'Orbitron'; font-size: 0.7rem;"><a href="../index.html" style="color:white; text-decoration:none;">HOME</a></div>
     </nav>
-
-    <header class="roster-hero">
-        <div class="team-badge-large"><i class="fas fa-crosshairs"></i></div>
-        <h1 class="team-title">4KT SHADOW HUNTERS</h1>
-        <div class="team-tagline">4零丨 PRECISION IN THE DARKNESS</div>
-        <div style="color: #888; font-weight: bold; letter-spacing: 2px; margin-top: 10px;">TIER 1 CHAMPIONS</div>
+    <header class="hero">
+        <h1>SHADOW HUNTERS</h1>
+        <p style="font-family:'Orbitron'; color:#888; letter-spacing:5px;">STRIKE FROM THE DARK</p>
     </header>
-
-    <div class="player-grid">
-        <div class="player-card">
-            <span class="player-flag">🇳🇬</span>
-            <span class="player-role">WILDCARD</span>
-            <div class="player-name">4零丨Mazi</div>
-            <div class="stat-bar">
-                <div class="stat-item"><span class="stat-val">4.8</span><span class="stat-lab">KD</span></div>
-                <div class="stat-item"><span class="stat-val">85%</span><span class="stat-lab">WR</span></div>
+    <div class="container">
+        <section class="glass-panel">
+            <h2 style="font-family:'Orbitron'; color:var(--gold);">THE ELITE SQUAD</h2>
+            <p>The Shadow Hunters are the primary tactical unit of the 4KT Division. Known for their stealth maneuvers and unmatched coordination, they represent the gold standard of Blood Esports.</p>
+            <div class="roster-grid">
+                <div class="player-card"><h3>PLAYER 1</h3><p style="color:var(--gold); font-size:0.7rem;">LEAD TACTICIAN</p></div>
+                <div class="player-card"><h3>PLAYER 2</h3><p style="color:var(--gold); font-size:0.7rem;">ENTRY FRAGGER</p></div>
+                <div class="player-card"><h3>PLAYER 3</h3><p style="color:var(--gold); font-size:0.7rem;">SUPPORT</p></div>
             </div>
-        </div>
-
-        <div class="player-card">
-            <span class="player-flag">🇨🇦</span>
-            <span class="player-role">CLAN MASTER & TACTICIAN</span>
-            <div class="player-name">4零丨Choco</div>
-            <div class="stat-bar">
-                <div class="stat-item"><span class="stat-val">5.2</span><span class="stat-lab">KD</span></div>
-                <div class="stat-item"><span class="stat-val">90%</span><span class="stat-lab">WR</span></div>
-            </div>
-        </div>
-
-        <div class="player-card">
-            <span class="player-flag">🇳🇬</span>
-            <span class="player-role">SNIPER & SUPPORT</span>
-            <div class="player-name">4零丨Virus</div>
-            <div class="stat-bar">
-                <div class="stat-item"><span class="stat-val">4.5</span><span class="stat-lab">KD</span></div>
-                <div class="stat-item"><span class="stat-val">82%</span><span class="stat-lab">WR</span></div>
-            </div>
-        </div>
-
-        <div class="player-card">
-            <span class="player-flag">🇬🇭</span>
-            <span class="player-role">ENTRY FRAGGER</span>
-            <div class="player-name">4零丨Melly</div>
-            <div class="stat-bar">
-                <div class="stat-item"><span class="stat-val">4.9</span><span class="stat-lab">KD</span></div>
-                <div class="stat-item"><span class="stat-val">87%</span><span class="stat-lab">WR</span></div>
-            </div>
-        </div>
-
-        <div class="player-card">
-            <span class="player-flag">🇬🇭</span>
-            <span class="player-role">SUPPORT</span>
-            <div class="player-name">4零丨Flowstate</div>
-            <div class="stat-bar">
-                <div class="stat-item"><span class="stat-val">4.7</span><span class="stat-lab">KD</span></div>
-                <div class="stat-item"><span class="stat-val">84%</span><span class="stat-lab">WR</span></div>
-            </div>
-        </div>
-
-        <div class="player-card">
-            <span class="player-flag">🇺🇬</span>
-            <span class="player-role">IGL</span>
-            <div class="player-name">4零丨Beetle</div>
-            <div class="stat-bar">
-                <div class="stat-item"><span class="stat-val">4.2</span><span class="stat-lab">KD</span></div>
-                <div class="stat-item"><span class="stat-val">88%</span><span class="stat-lab">WR</span></div>
-            </div>
-        </div>
-
-        <div class="player-card">
-            <span class="player-flag">🇳🇬</span>
-            <span class="player-role">STRATEGIST & SUPPORT</span>
-            <div class="player-name">4零丨Sage</div>
-            <div class="stat-bar">
-                <div class="stat-item"><span class="stat-val">4.4</span><span class="stat-lab">KD</span></div>
-                <div class="stat-item"><span class="stat-val">86%</span><span class="stat-lab">WR</span></div>
-            </div>
-        </div>
+        </section>
+        <div style="text-align: center;"><a href="https://discord.gg/99uuMvMBX" class="btn">JOIN THE SHADOWS</a></div>
     </div>
-
-    <footer class="footer">
-        <p style="font-family:'Orbitron'; font-size:0.75rem; color:#555; letter-spacing:3px;">© 2026 BLOOD ESPORTS | 100+ MEMBERS STRONG</p>
-    </footer>
-
-    <script>
-        const canvas = document.getElementById('particle-canvas');
-        const ctx = canvas.getContext('2d');
-        let particles = [];
-        function init() {
-            canvas.width = window.innerWidth; canvas.height = window.innerHeight;
-            particles = [];
-            for (let i = 0; i < 150; i++) {
-                particles.push({ x: Math.random() * canvas.width, y: Math.random() * canvas.height, size: Math.random() * 2.5, speed: Math.random() * 0.4 + 0.1 });
-            }
-        }
-        function animate() {
-            ctx.clearRect(0, 0, canvas.width, canvas.height); ctx.fillStyle = '#FFD700';
-            particles.forEach(p => {
-                ctx.beginPath(); ctx.arc(p.x, p.y, p.size, 0, Math.PI * 2); ctx.fill();
-                p.y -= p.speed; if (p.y < 0) p.y = canvas.height;
-            });
-            requestAnimationFrame(animate);
-        }
-        window.addEventListener('resize', init); init(); animate();
-    </script>
 </body>
 </html>
